--- a/misc/planering.html
+++ b/misc/planering.html
@@ -197,9 +197,11 @@
                 <td>12</td>
                 <td>
                     <!-- Vad görs på lektionen vecka 12? -->
+                    Fixa sista småsakerna, testa och utvärdera projektet
                 </td>
                 <td>
                     <!-- Vad görs utanför lektionen vecka 12? -->
+                    gör det som inte blir färdigt.
                 </td>
             </tr>
         </table>
@@ -287,7 +289,19 @@
             Förhoppningsvis har jag inte lagt ner för mycket tid på funktionaliteten.</p>
         <h3>Lektion vecka 11</h3>
         <!-- Fyll på med dokumentation här. -->
-        <p></p>
+        <p>Skriver detta på kvällen efter lektionen: Idag har jag börjat på info/hjälp delen där jag kommer att visa
+            bild och texthantering. Dessutom har jag börjat fixa och är nästan färdig med att göra en desktop anpassad
+            vy; Möjligen gör jag en ipad storlek för sidan också. Nästan all funktionalitet är färdig på sidan. Tänkte
+            lägga till att man kan klicka Enter istället för att klicka på en knappa på skärmen. Förutom det funderar
+            jag på att ge sidan två färgscheman men vad jag måste göra till nästa lektion är att fixa/redigera bilder
+            och göra illustrationer som ska finna i info/hjälp delen. Tanken är att det ska vara en del där man kan
+            läsa/se hur man använder sidan. Då måste jag göra ett flertal bilder som visualierar det. Möjligtvis att en
+            del visar tre bilder efter varandra. Det finns alltså mycket mer jag skulle kunna lägga till på sidan men
+            det viktigaste är att det blir en bra helhet och att jag även får tid till att testa sidan och utvärdera
+            hela projektet. Därför tänker jag nog bara göra färdigt desktop anpassningen och info/hjälp-delen.</p>
+        <p>Jag funderar dock på om jag, efter jag lämnat in projektet, ska fortsätta och finslipa på min applikation då
+            jag tänker skicka in den till skol-galan. Det hade varit kul om man vann något där eller i alla fall fick
+            någon bekräftelse om att man gjort ett bra jobb. </p>
         <h3>Lektion vecka 12</h3>
         <!-- Fyll på med dokumentation här. -->
         <p></p>
