--- a/misc/planering.html
+++ b/misc/planering.html
@@ -304,7 +304,12 @@
             någon bekräftelse om att man gjort ett bra jobb. </p>
         <h3>Lektion vecka 12</h3>
         <!-- Fyll på med dokumentation här. -->
-        <p></p>
+        <p>Idag har jag jobbat på distans och framförallt försökt lösa buggar som jag har just nu i min applikation. Det
+            har gått sådär och jag håller fortfarande på med lösningarna. Vad jag har märkt från att jobba på distans är
+            att jag har svårt att koncentrera mig i mitt rum och tänker därför sätta mig på något bibliotek, så länge
+            som dem är öppna, framöver. Då detta var sista lektionen har jag en del saker jag måste göra innan jag ska
+            lämna in. Tänker lägga fokus på text och bilder då det är det som bedöms och förhoppningsvis hinner jag med
+            allt jag vill göra.</p>
     </section>
 
     <section class="neomorph">
