--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
         </aside>
         
     </section>
-    <script src="js/test.js"></script>
+    <script src="js/func.js"></script>
 </body>
 </html>
