--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                         <div class="addList-carousel">
                             <div class="images">
                                 <figure id="infoImg1" class="infoimg">
-                                    <img src="img/newList!button.png" alt="">
+                                    <img src="img/newList!button.png" alt="image of the 'new list' button">
                                 </figure>
                                 <figure id="infoImg2" class="infoimg">
-                                    <img src="img/addlistpopup.png" alt="">
+                                    <img src="img/addlistpopup.png" alt="image of a popup which is used for adding a new list">
                                 </figure>
                                 <figure id="infoImg3" class="infoimg">
-                                    <img src="img/newlist.png" alt="">
+                                    <img src="img/newlist.png" alt="image of an example of a new list">
                                 </figure>
                             </div>
                             <a href="#infoImg1"><div class="infoimglink">1</div></a>
@@ -100,7 +100,7 @@
         <section class="content">
             <section id="frontpage" class="frontpage">
                 <figure class="frontimg">
-                    <img src="img/blue-keyboard.jpg" alt="">
+                    <img src="img/blue-keyboard.jpg" alt="black keyboard with blue LED-lights">
                     <p>Welcome! Click logo to go to the documentation.</p>
                 </figure>
                 <section class="create-list-box">
