--- a/misc/planering.html
+++ b/misc/planering.html
@@ -348,7 +348,8 @@
         <h2>4. Testning</h2>
         <!-- Testa i Chrome + Firefox eller Safari (på både dator och mobil). Skiljer sig resultatet? Har du behövt anpassa ditt kod/innehåll efter de olika webbläsarna? Hur gick valideringen? Vad säger contrastchecker.com om text/bakgrundsfärg? Hur ser resultatet ut på en riktig telefon? -->
         <h3>4.1 webbläsarna</h3>
-        <p>Min sida fungerar utan problem på chrome, opera, firefox och microsoft edge men inte på internet explorer,
+        <img src="internetexplorerfail.png" alt="">
+        <p>Min sida fungerar utan problem på chrome, opera, firefox och microsoft edge men inte på internet explorer(Se bild ovan),
             både dator och mobil funkar bra. Detta är på grund av att internet explorer inte verkar ha support for de
             ikoner som min sida använder vilka ligger på en extern server. Dock fanns det ett litet problem med
             scrollbaren. Att använda "overflow: overlay" var inte supportat av alla webbläsare vilket gjorde att
